Changes after KOffice-1.3-beta3
===============================
KOfficeCore:
- Fixed saving of the window size when closing
KoText:
- Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
- PgUp/PgDown works better than before when "move the caret" is enabled (#45246)
- Fixed painting of non-breakable-spaces (could show up as a visible square)
- Implemented painting of non-breakable-spaces when "draw formatting characters" is on
- Fixed crash (e.g. happening with 'section title' variable, #61735)
- Fixed pasting of plain text (so that it creates new pages if necessary, #58651)

Changes after KOffice-1.3-beta2
===============================
- Support for EPS images: works again for gs interpreters without the png16m device
- KoText:
  Paragraph borders now support variable width (e.g. being inside
  DTP frames of different widths).

Changes after KOffice-1.3-beta1
===============================
- Support for opening backup files (e.g. foo.kwd~)
- Page Layout Dialog: validate user input to prevent nonsense (e.g. margins wider than page)
- KoText:
  Fixed drawing of word-by-word underline and strikeout
  Repainting fixes (in multiline paragraphs)
  Linespacing fixes (at-least and multiple work as advertised, added "fixed")
  Major reduction of the memory usage per paragraph
  Hyphenation fixes (support for breaking the same words more than once)
  Shadow is now a character property (instead of a paragraph property)
  More precise painting of paragraph borders

Changes after KOffice-1.2
=======================
- New command line option: --print. Prints the document(s) passed on the command
   line, without showing a window. Useful for scripts and servicemenus.