@@ -2,6 +2,7 @@ Changes after KOffice-1.3-beta3
 ===============================
 KOfficeCore:
 - Fixed saving of the window size when closing
+- Cache the configuration object around kofficerc, to improve startup performance
 KoText:
 - Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
 and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
